# Sem_3

./: DAMP_resources.md  README.md
CS213/Resources/gzip-class/: README.md  ab.txt  ab.txt~  b.txt  c.txt  c.txt~  name.txt~  t.txt~
CS213/Resources/gzip-class/gzip-1.13/: ChangeLog  ChangeLog-2007  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  algorithm.doc  bits.c  cfg.mk  config.status  configure  configure.ac  deflate.c  dfltcc.c  dist-check.mk  gunzip.in  gzexe.1  gzexe.in  gzip  gzip.1  gzip.c  gzip.c~  gzip.doc  gzip.h  inflate.c  inflate.c~  lzw.h  revision.h  tailor.h  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  version.c  (+17 more)
CS213/Resources/gzip-class/gzip-1.13/.deps/: bits.Po  deflate.Po  gzip.Po  inflate.Po  trees.Po  unlzh.Po  unlzw.Po  unpack.Po  unzip.Po  util.Po  version.Po  zip.Po
CS213/Resources/gzip-class/gzip-1.13/doc/: Makefile  Makefile.am  Makefile.in  fdl.texi  gzip.info  gzip.texi  stamp-vti
CS213/Resources/gzip-class/gzip-1.13/lib/: Makefile  Makefile.am  Makefile.in  config.h  config.hin  dirent.h  error.h  gnulib.mk  inttypes.h  match.c  math.h  signal.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
CS213/Resources/gzip-class/gzip-1.13/lib/.deps/: asnprintf.Po  fopen.Po  fprintf.Po  libgzip_a-basename-lgpl.Po  libgzip_a-chdir-long.Po  libgzip_a-cloexec.Po  libgzip_a-creat-safer.Po  libgzip_a-dirname-lgpl.Po  libgzip_a-dup-safer-flag.Po  libgzip_a-dup-safer.Po  libgzip_a-exitfail.Po  libgzip_a-fclose.Po  libgzip_a-fcntl.Po  libgzip_a-fd-hook.Po  libgzip_a-fd-safer-flag.Po  libgzip_a-fd-safer.Po  libgzip_a-fflush.Po  libgzip_a-filenamecat-lgpl.Po  libgzip_a-fpurge.Po  libgzip_a-freading.Po  libgzip_a-fseek.Po  libgzip_a-fseeko.Po  libgzip_a-fseterr.Po  libgzip_a-getprogname.Po  libgzip_a-gettime.Po  libgzip_a-ialloc.Po  libgzip_a-malloca.Po  libgzip_a-math.Po  libgzip_a-mbszero.Po  libgzip_a-open-safer.Po  libgzip_a-openat-die.Po  libgzip_a-openat-proc.Po  libgzip_a-openat-safer.Po  libgzip_a-opendir-safer.Po  libgzip_a-pipe-safer.Po  libgzip_a-printf-frexp.Po  libgzip_a-printf-frexpl.Po  libgzip_a-save-cwd.Po  libgzip_a-savedir.Po  libgzip_a-sig-handler.Po  (+15 more)
CS213/Resources/gzip-class/gzip-1.13/lib/sys/: stat.h
CS213/Resources/gzip-class/gzip-1.13/m4/: gnulib-comp.m4  shell.m4
CS213/Resources/gzip-class/gzip-1.13/sample/: add.c  makecrc.c  sub.c  zfile  zread.c  ztouch
CS213/Resources/gzip-class/gzip-1.13/tests/: Makefile  Makefile.am  Makefile.in  gzip-env  helin-segv  help-version  hufts  init.cfg  keep  list  list-big  memcpy-abuse  mixed  null-suffix-clobber  pipe-output  reproducible  stdin  timestamp  trailing-nul  two-files  unpack-invalid  unpack-valid  upper-suffix  write-error  z-suffix  zdiff  zgrep-abuse  zgrep-binary  zgrep-context  zgrep-f  zgrep-signal  znew-k
CS215/Assignments/: A2_q3.data
CS215/Assignments/A2/: clarifications.txt
CS215/Assignments/A3/: clarifications.txt
CS215/Assignments/A4/: A4_solutions.ipynb
CS215/Assignments/A5/: Q1.ipynb  TaxiData.csv
CS215/PracticeSets/: PracticeSet8_HypothesisTesting.txt
CS215/Reading_Material/1_NonParammetricDensityEstimation/: README.md
CS215/Reading_Material/2_Regression/: README.md
CS215/Reading_Material/3_TimeSeriesAnalysis/: README.md
CS215/Reading_Material/4_MVA/: README.md
CS215/Reading_Material/5_PCA/: README.md
CS215/Reading_Material/6_TSNE/: README.md
CS215/Reading_Material/8_RobustStatistics/: README.md
CS230/Notes/2_ComputerArchitecture/: README.md
CS231/: README.md
CS231/Exams/lite-lab-endsem-template/: lite-lab-endsem.html  mutual-recursion.c  product.c
CS231/LabAssignments/lab03/: karatsuba_assignment-1.v  tb_iterative_karatsuba.v
CS231/References/Architecture/Dinero-4CacheSimulator/d4-7/: CHANGES  COPYRIGHT  Makefile.in  NOTES  README  TODO  binaryfmt.c  cmdargs.c  cmdargs.h  cmdd4.h  cmdmain.c  config.h.in  configure  configure.in  d4.1  d4.3  d4.h  dinfmt.c  misc.c  pixie32fmt.c  pixie64fmt.c  ref.c  tracein.c  tracein.h  xdinfmt.c
CS231/References/Architecture/Dinero-4CacheSimulator/d4-7/testing/: Makefile  README  mm.32  mm.32.good.i8d8b16a2Q10  mm.32.good.i8d8b64S16fa  mm.32.good.i8d8b64S16faD  mm.32.good.i8d8b64S16fab  mm.32.good.i8d8b64S16fap  mm.32.good.i8d8b64S16fl  mm.32.good.i8d8b64S16flD  mm.32.good.i8d8b64S16flb  mm.32.good.i8d8b64S16flp  mm.32.good.i8d8b64S16fm  mm.32.good.i8d8b64S16fmD  mm.32.good.i8d8b64S16fmb  mm.32.good.i8d8b64S16fmp  mm.32.good.i8d8b64S16fs  mm.32.good.i8d8b64S16fsD  mm.32.good.i8d8b64S16fsP50  mm.32.good.i8d8b64S16fsP50D  mm.32.good.i8d8b64S16fsP50b  mm.32.good.i8d8b64S16fsP50p  mm.32.good.i8d8b64S16fsb  mm.32.good.i8d8b64S16fsp  mm.32.good.i8d8b64S16ft  mm.32.good.i8d8b64S16ftD  mm.32.good.i8d8b64S16ftb  mm.32.good.i8d8b64S16ftc  mm.32.good.i8d8b64S16ftcD  mm.32.good.i8d8b64S16ftcb  mm.32.good.i8d8b64S16ftcp  mm.32.good.i8d8b64S16ftp  mm.32.good.id8b16a1_u1b64a4  mm.32.good.id8b16a1_u1b64a4D  mm.32.good.id8b16a1_u1b64a4b  mm.32.good.id8b16a1_u1b64a4p  mm.32.good.u0b16a8  mm.32.good.u0b16a8D  mm.32.good.u0b16a8b  mm.32.good.u0b16a8p  (+54 more)
CS231/Tutorials/Verilog/: rec_counter.v  seq.v  simple_counter.v  subtraction.v  tb_simple_counter.v
CS231/Tuts/Verilog/: a.out  simple_counter.vcd  subtraction_tb.v  test.v
CS293/LabAssignments/lab03/: 24-README
CS293/LabAssignments/lab06/: 24-README
CS293/LabAssignments/lab07/: 24-README
CS293/LabAssignments/lab08/: 24-README
CS293/LabAssignments/lab09/: 24-README
CS293/LabQuizzes/Quiz1/: README
CS293/LabQuizzes/Quiz2/: 24-README
CS293/LabQuizzes/Quiz3/: 24-README
CS293/LabQuizzes/Quiz4/: 24-README
CS293/Lab_Assignments/lab01/: README
CS293/Lab_Assignments/lab04/: 24-README
CS293/Lab_Assignments/lab05/: 24-README
CS293/ProblemStatements/lab02/: 24-README
CS293/Project/plagiarism_checker/: tokenizer.hpp
CS293/Resources/Aut23-Quiz2/: README.md
CS293/Resources/Aut23_MidSem/: README
CS293/Resources/Aut23_Quiz1/: README
EC101/: README.md
PopularElectives/: README.md
PopularElectives/MA403/: README.md
Popular_Electives/: README.md
Popular_Electives/MA_403/: README.md
(+629 files in other folders)
